Add payments microservice
